fixed checkers offset and overflow

--- a/controls/TextControl/TextControl.css
+++ b/controls/TextControl/TextControl.css
@@ -48,6 +48,7 @@
     resize:               none;
     cursor:               default;
 
+    padding-top:          0.4em;
     padding-left:         0.4em;
     padding-right:        0.4em;
 
