--- a/operators/Operator.css
+++ b/operators/Operator.css
@@ -49,17 +49,33 @@
 }
 
 
+.nodeHeaderCheckersHolder
+{
+    display:       inline-block;
+    width:         100%;
+    height: 100%;
+    position:      absolute;
+    left:          0;
+    top:           0; 
+    z-index:       1;
+    overflow:      hidden;
+    border-radius: 4px 4px 0 0;
+    pointer-events: none;
+    /* box-shadow:    0 0 0 1px red inset; */
+}
+
+
 .nodeHeaderCheckers
 {
     display:       inline-block;
     width:         100%;
+    height: 100%;
     position:      absolute;
     left:          0;
     top:           0; 
     border-radius: 4px 4px 0 0;
-    z-index:       1;
- /* overflow:      visible; */
- /* box-shadow:    0 0 0 1px red inset; */
+    pointer-events: none;
+    /* box-shadow:    0 0 0 1px blue inset; */
 }
 
 
